--- a/ng-frontend/src/app/features/home/home.html
+++ b/ng-frontend/src/app/features/home/home.html
@@ -81,8 +81,9 @@
     </header>
 
     <div class="bento-grid" id="community-post">
-      @for (post of vm.posts; track post.title; let i = $index) {
-      <div class="bento-item" (click)="openDetails(post.title)" [attr.data-post-id]="post.id" [trackPreview]="post.id">
+      @for (post of vm.posts; track post.uuid; let i = $index) {
+      <div class="bento-item" (click)="openDetails(post.uuid!)" [attr.data-post-id]="post.uuid"
+        [trackPreview]="post.uuid!">
         <app-post-card [post]="post" mode="card">
           <div actions>
             <button class="btn-fav ms-auto">
